# desafio_oncase

./: .gitignore  README.html  README.md  pyproject.toml  test.R  testing.py
docs/: Desafio DS Oncase.docx  classification_ref.md  clustering.md  ideas_for_eda.html  ideas_for_eda.md  regression_ref.md
notebooks/: classification.ipynb  clustering.ipynb  eda.Rmd  eda.html  regression.ipynb
test/: testing.R
