[tool.poetry]
name = "desafio_oncase"
version = "0.1.0"
description = ""
authors = ["Adriel Martins <adrielfalcao@gmail.com>"]
license = "\"The Unlincese\""

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^20.8b1"
autopep8 = "^1.5.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
