[tool.poetry]
name = "desafio_oncase"
version = "0.1.0"
description = ""
authors = ["Adriel Martins <adrielfalcao@gmail.com>"]
license = "\"The Unlincese\""

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.4"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
xgboost = "^1.4.1"
shap = "^0.39.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^20.8b1"
autopep8 = "^1.5.6"
ipykernel = "^5.5.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
